@@ -1,5 +1,0 @@
-import unittest
-
-class LinuxSpecificTestCase(unittest.TestCase):
-    pass
-
