@@ -1,5 +1,0 @@
-import unittest
-
-class WindowsSpecificTestCase(unittest.TestCase):
-    pass
-
